# RayTracing

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RayTracing.sln  render.bat
RayTracing/: RayTracing.vcxproj
Source/: AABB.cpp  AABB.h  BVH.h  Camera.cpp  Camera.h  Color.h  Hittable.h  HittableList.h  Interval.cpp  Interval.h  Material.h  Math.cpp  Math.h  Ray.h  Sphere.cpp  Sphere.h  Texture.h  Vector.cpp  Vector.h  main.cpp
